--- a/app_cliente/nginx.conf
+++ b/app_cliente/nginx.conf
@@ -10,7 +10,7 @@ server {
 
     # Proxy para el servicio de clientes (puerto 8090)
     location /api/v1/clients {
-        proxy_pass http://client-service:8090/api/v1/clients;
+        proxy_pass http://client_service:8090/api/v1/clients;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -20,7 +20,7 @@ server {
 
     # Proxy para el servicio de cuentas y movimientos (puerto 8095)
     location /api/v1/accounts {
-        proxy_pass http://account-service:8095/api/v1/accounts;
+        proxy_pass http://account_service:8095/api/v1/accounts;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -29,7 +29,7 @@ server {
     }
 
     location /api/v1/movements {
-        proxy_pass http://account-service:8095/api/v1/movements;
+        proxy_pass http://account_service:8095/api/v1/movements;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
